@@ -147,29 +147,31 @@ class Statusbar(Gtk.Box):
 
         tab_spaces_2 = Gtk.RadioButton(
             label="2",
-            active=(preferences.tab_width == 2),
-            action_name="editor.tab-width",
             action_target=GLib.Variant('i', 2))
+        # not need to set active, at this moment only one radio is in group
         tab_spaces_2.connect("toggled", self.on_tab_spaces)
         box.pack_start(tab_spaces_2, True, True, 0)
 
         tab_spaces_4 = Gtk.RadioButton(
             label="4",
-            active=(preferences.tab_width == 4),
-            action_name="editor.tab-width",
             action_target=GLib.Variant('i', 4),
             group=tab_spaces_2)
+        if preferences.tab_width == 4:
+            tab_spaces_4.set_active(True)
         tab_spaces_4.connect("toggled", self.on_tab_spaces)
         box.pack_start(tab_spaces_4, True, True, 0)
 
         tab_spaces_8 = Gtk.RadioButton(
             label="8",
-            active=(preferences.tab_width == 8),
-            action_name="editor.tab-width",
             action_target=GLib.Variant('i', 8),
             group=tab_spaces_2)
+        if preferences.tab_width == 8:
+            tab_spaces_8.set_active(True)
         tab_spaces_8.connect("toggled", self.on_tab_spaces)
         box.pack_start(tab_spaces_8, True, True, 0)
+
+        for radio in (tab_spaces_2, tab_spaces_4, tab_spaces_8):
+            radio.set_action_name('editor.tab-width')
 
         box.pack_start(Gtk.Separator(orientation=Gtk.Orientation.HORIZONTAL),
                        True, True, 5)
