@@ -17,8 +17,9 @@ Version 1.5.0
   * searching refactoring
   * don't crash application when vim window failed or formiko icon not found
   * right working with formatting and extensions by mime type
-  * right margin settings
-  * dark theme renderer support
+  * right margin settings (issue 36)
+  * dark theme renderer support (issue #18)
+  * tab_width from ini config file fix (issue #28)
 
 Version 1.4.3
 
